Se suben cambios a las pantallas de inicio y sobre mi y cambios a css

--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -18,17 +18,30 @@
     </header>
     <main>
       <section>
-        <h2>Mi historia</h2>
-        <p>Soy [tu nombre], y me apasiona [tu pasión o profesión]. Desde pequeño/a siempre he tenido curiosidad por [tema relacionado]. Después de estudiar [tus estudios], empecé a trabajar en [tu primer trabajo relacionado con tu carrera]. A partir de entonces, he tenido la oportunidad de trabajar en varios proyectos interesantes y desafiantes, como [lista algunos proyectos destacados].</p>
-        <p>Actualmente, [describe brevemente tu trabajo actual o lo que estás haciendo en la actualidad]. Me gusta seguir aprendiendo y mejorando mis habilidades, y en mi tiempo libre disfruto de [tus pasatiempos o intereses].</p>
+        <h2>Un poco de mí!</h2>
+        <p>Hola! Soy Rocio Quezada, y estoy titulada como Desarrolladora Full Stack en un Bootcamp de tres meses llamado Generation donde aprendí habilidades blandas y técnicas, en el
+		    transcurso del bootcamp tuve que hacer un proyecto con un equipo de cinco personas, este proyecto tenia la finalidad de hacer una aplicacion web donde los usuarios podian
+		    tener un perfil con sus datos y anclado a ellos un perfil con sus mascotas y datos de estos tambien contaba con un mapa para poder subir reportes de mascotas perdidas o
+		    encontradas y encontrar lugares de interes cercanos a ellos. La mayor caracteristica de este proyecto era que estaba unicamente dedicado a las mascotas y a sus tutores.
+		    Desde pequeña siempre he tenido curiosidad por como funcionaba todo lo que veia en internet desde videojuegos, paginas o aplicaciones. Después de estudiar programación 
+		    empecé a trabajar como Automatizadora QA.</p>
+        <p>Actualmente, trabajo como Automatizadora QA que consiste en la ejecucion de un conjunto de casos de pruebas donde se asegura la calidad de un servicio para asi
+        entregar un producto confiable y seguro. Me gusta seguir aprendiendo y mejorando mis habilidades, y en mi tiempo libre disfruto de aprender codigo, jugar juegos de pc
+        y pasar tiempo con mis tres gatos.</p>
       </section>
       <section>
-        <h2>Mis habilidades</h2>
+        <h2>Mis habilidades blandas</h2>
         <ul>
-          <li>[habilidad 1]</li>
-          <li>[habilidad 2]</li>
-          <li>[habilidad 3]</li>
-          <li>[habilidad 4]</li>
+          <li>Trabajo en equipo</li>
+          <li>Comunicación</li>
+          <li>Perseverancia</li>
+        </ul>
+		
+		  <h2>Mis habilidades técnicas</h2>
+        <ul>
+          <li>Java y Java Script</li>
+          <li>Base de datos</li>
+          <li>HTML y CSS</li>
         </ul>
       </section>
     </main>
