--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <main>
       <section id="inicio">
-        <h2>Bienvenidos a mi sitio web personal</h2>
-        <p>En este sitio podrás encontrar información sobre mí, mis habilidades y mi experiencia laboral.</p>
+        <h2>¡Bienvenido/a!</h2>
+        <p>En este sitio podrás encontrar información sobre mí, mis habilidades y mi experiencia laboral, espero que te guste! :D</p>
       </section>
     </main>
 
