--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <h1>Acerca de mí</h1>
+      <h1>Conoce un poco sobre mí!</h1>
       <nav>
         <ul>
           <li><a href="index.html">Inicio</a></li>
@@ -18,7 +18,7 @@
     </header>
     <main>
       <section>
-        <h2>Un poco de mí!</h2>
+        <h2>Sobre mí!</h2>
         <p>Hola! Soy Rocio Quezada, y estoy titulada como Desarrolladora Full Stack en un Bootcamp de tres meses llamado Generation donde aprendí habilidades blandas y técnicas, en el
 		    transcurso del bootcamp tuve que hacer un proyecto con un equipo de cinco personas, este proyecto tenia la finalidad de hacer una aplicacion web donde los usuarios podian
 		    tener un perfil con sus datos y anclado a ellos un perfil con sus mascotas y datos de estos tambien contaba con un mapa para poder subir reportes de mascotas perdidas o
@@ -46,7 +46,7 @@
       </section>
     </main>
     <footer>
-      <p>Derechos de autor © [tu nombre o empresa] 2023</p>
+      <p>Derechos de autor © Rocio Quezada 2023</p>
     </footer>
   </body>
 </html>
