Se suben cambios de las pantañlas contacto y sobre mi

--- a/contacto.html
+++ b/contacto.html
@@ -18,7 +18,7 @@
 
     <main>
       <section id="contacto">
-        <h2>Contacto</h2>
+        <h2>Contactanos!</h2>
         <p>Para contactarme, por favor utiliza el siguiente formulario:</p>
         <form action="enviar.php" method="post">
           <label for="nombre">Nombre:</label>
