--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -43,6 +43,8 @@
           <li>Base de datos</li>
           <li>HTML y CSS</li>
         </ul>
+      <h2>Link</h2>
+        <li>GitHub - https://github.com/RocioQ01</li>
       </section>
     </main>
     <footer>
